--- a/templates/topic.html
+++ b/templates/topic.html
@@ -76,11 +76,15 @@
         }
         
         a.prev {
+            border-radius: 0 0 0 10px;
             -moz-border-radius: 0 0 0 10px;
+            -webkit-border-radius: 0 0 0 10px;
         }
         
         a.next {
+            border-radius: 0 0 10px 0;
             -moz-border-radius: 0 0 10px 0;
+            -webkit-border-radius: 0 0 10px 0;
         }
         
         a.prev:hover,
