--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     {% block title %}
-        <title>webnodes | a visualization of proggit</title>
+        <title>webnodes | a javascript tree forum</title>
     {% end %}
     <link type="text/css" href="/static/style.css" rel="stylesheet">
     {% block style %}{% end %}
@@ -14,7 +14,7 @@
     <div id="header">
         <a href="/" id="logo">webnodes</a>
         <br>
-        a visualization of <a href="http://www.reddit.com/r/programming/">proggit</a>
+        a javascript tree forum
     </div>
     <div id="content">
         {% block content %}{% end %}
