--- a/templates/error.html
+++ b/templates/error.html
@@ -10,6 +10,8 @@
     <p>
         Opps! We done had a problem accessing reddit's API.
         <br>
+        This happens from time to time when reddit is busy, or when API requests are being rate limited.
+        <br>
         Please try refreshing the page a few times, or come back later.
     </p>
 {% end %}
