--- a/templates/error.html
+++ b/templates/error.html
@@ -7,11 +7,9 @@
 
 
 {% block content %}
+    <p>Opps! We done had a problem accessing reddit's API.</p>
     <p>
-        Opps! We done had a problem accessing reddit's API.
-        <br>
         This happens from time to time when reddit is busy, or when API requests are being rate limited.
-        <br>
-        Please try refreshing the page a few times, or come back later.
     </p>
+    <p>Please try refreshing the page a few times, or come back later.</p>
 {% end %}
