--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
         <a href="/" id="logo">webnodes</a>
         <br>
         a visualization of <a href="http://www.reddit.com/r/programming/">proggit</a>
+        <br>
+        ⇢ <a href="http://github.com/csytan/webnodes">github project</a>
     </div>
     <div id="content">
         {% block content %}{% end %}
