--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <br>
         a visualization of <a href="http://www.reddit.com/r/programming/">proggit</a>
         <br>
-        ⇢ <a href="http://github.com/csytan/webnodes">github project</a>
+        ⇢ <a href="http://github.com/csytan/webnodes">github</a>
     </div>
     <div id="content">
         {% block content %}{% end %}
