--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,11 @@
 </head>
 
 <body>
+    <a href="http://github.com/csytan/webnodes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div id="header">
         <a href="/" id="logo">webnodes</a>
         <br>
         a visualization of <a href="http://www.reddit.com/r/programming/">proggit</a>
-        <br>
-        ⇢ <a href="http://github.com/csytan/webnodes">github</a>
     </div>
     <div id="content">
         {% block content %}{% end %}
