--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,12 @@
 
 <body>
     <div id="header">
-        <a href="/" id="logo">webnodes</a>
+        <div id="logo">
+            <a href="/">thrutched</a>
+        </div>
+        <div id="nav">
+            <a href="/submit">submit</a>
+        </div>
     </div>
     <div id="content">
         {% block content %}{% end %}
