--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,12 @@
 
 
 {% block content %}
-    <div class="topic">
-        <h2>An Example Topic</h2>
-    </div>
+    {% for topic in topics %}
+        <div class="topic">
+            <h2>
+                <a href="{% if topic.link %}{{ topic.link }}{% else %}/topics/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
+            </h2>
+            <p>Anonymous, 23 points, <a href="/topics/{{ topic.id }}">comments</a></p>
+        </div>
+    {% end %}
 {% end %}
