--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,14 @@
         </div>
         <div id="nav">
             <a href="/submit">submit</a>
+            <a href="/community">community</a>
+            {% if current_user %}
+                <a href="/users/{{ current_user.name }}">{{ current_user.name }}</a>
+                |
+                <a href="/sign_out">sign out</a>
+            {% else %}
+                <a href="/sign_in">sign in</a>
+            {% end %}
         </div>
     </div>
     <div id="content">
