--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,18 @@
 {% extends "base.html" %}
 
 
+{% block style %}
+    <style>
+        .topic { margin-bottom: 2em; }
+    </style>
+{% end %}
+
+
 {% block content %}
     {% for topic in topics %}
         <div class="topic">
             <h2>
-                <a href="{% if topic.link %}{{ topic.link }}{% else %}/topics/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
+                <a href="{% if topic.link %}{{ topic.link }}{% else %}/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
             </h2>
             <p class="topic_info">
                 {% if topic.points == 1 %}
@@ -13,9 +20,15 @@
                 {% else %}
                     {{ topic.points }} points
                 {% end %}
-                by anonymous
+                
+                {% if topic.author %}
+                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
+                {% else %}
+                    by anonymous
+                {% end %}
+                
                 {{ locale.format_date(topic.created) }},
-                <a href="/topics/{{ topic.id }}">
+                <a href="/{{ topic.id }}">
                     {% if topic.n_comments == 1 %}
                         1 comment
                     {% else %}
