--- a/templates/topic.html
+++ b/templates/topic.html
@@ -20,7 +20,6 @@
 
 {% block style %}
     <style>
-        h1 { margin-bottom: 0.5em; }
         #reply_box {
             display: none;
         }
@@ -40,20 +39,34 @@
             {{ escape(topic.title) }}
         {% end %}
     </h1>
-    <p class="topic_info">
-        {% if topic.points == 1 %}
-            1 point
+    <div class="comment topic">
+        {% if topic.author %}
+            <img src="{{ topic.author.gravatar(50) }}" class="gravatar">
         {% else %}
-            {{ topic.points }} points
+            <img src="http://a.vimeocdn.com/portraits/defaults/d.50.jpg" class="gravatar">
         {% end %}
-        by anonymous
-        {{ locale.format_date(topic.created) }}
-    </p>
-    <div id="topic_body">
-        {% if topic.text %}
-            {{ handler.markdown(topic.text) }}
-        {% end %}
+        <div class="body">
+            <p class="info">
+                {% if topic.points == 1 %}
+                    1 point
+                {% else %}
+                    {{ topic.points }} points
+                {% end %}
+                
+                {% if topic.author %}
+                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
+                {% else %}
+                    by anonymous
+                {% end %}
+                
+                {{ locale.format_date(topic.created) }}
+            </p>
+            {% if topic.text %}
+                {{ handler.markdown(topic.text) }}
+            {% end %}
+        </div>
     </div>
+    
     <form action="" method="post">
         {{ xsrf_form_html() }}
         <textarea name="text"></textarea>
