--- a/templates/topic.html
+++ b/templates/topic.html
@@ -68,6 +68,7 @@
         </div>
     </div>
     
+    <h2 style="color:#666666;">Comments</h2>
     <div id="reply_box" class="comment">
         <form action="" method="post">
             {{ xsrf_form_html() }}
