--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -15,7 +15,7 @@
                 {% end %}
                 
                 {% if comment.author %}
-                    by <a href="/users/{{ comment.author.name }}">{{ comment.author.name }}</a>
+                    by <a href="/community/{{ comment.author.name }}">{{ comment.author.name }}</a>
                 {% else %}
                     by anonymous
                 {% end %}
