--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -20,7 +20,7 @@
 {% block content %}
     {% set message = handler.get_argument('message', None) %}
     {% if message == 'login_error' %}
-        <div id="message" class="error">Incorrect email or password</div>
+        <div id="message" class="error">Incorrect username or password</div>
     {% end %}
     
     <h1>Sign In</h1>
