--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -1,13 +1,17 @@
 {% for comment in comments %}
     <div class="comment">
         {% if comment.author %}
-            <img src="{{ comment.author.gravatar(50) }}" class="gravatar">
+            <img src="{{ comment.author.gravatar(60) }}" class="gravatar">
         {% else %}
-            <img src="http://a.vimeocdn.com/portraits/defaults/d.50.jpg" class="gravatar">
+            <img src="http://a.vimeocdn.com/portraits/defaults/d.60.jpg" class="gravatar">
         {% end %}
         
         <div class="body">
             <p class="info">
+                {% if current_user %}
+                    <a class="vote_up" href="/{{ comment.id }}">+</a>
+                {% end %}
+                
                 {% if comment.points == 1 %}
                     1 point
                 {% else %}
