--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
                 <a href="{% if topic.link %}{{ topic.link }}{% else %}/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
             </h2>
             <p class="comment_info">
+                {% if current_user %}
+                    <a class="vote_up" href="/{{ topic.id }}">+</a>
+                {% end %}
+                
                 {% if topic.points == 1 %}
                     1 point
                 {% else %}
